--- a/homepage/templates/homepage/about_me.html
+++ b/homepage/templates/homepage/about_me.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'homepage/css/about_me.css' %}" media="screen">
     <script src="https://kit.fontawesome.com/d36ca81881.js" crossorigin="anonymous"></script>
+
+    <style>
+    #profile {
+        margin-left: 2px;
+    }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,8 +50,17 @@
     <section class="margin-for-footer">
         <div class="container mt-t">
             <div class="row">
-                <div class="col-lg-8">
-                    <h1>Data Specialist Jusung</h1>
+                <div class="col-lg-8" id="profile">
+                    <h1>Profile</h1>
+                    <br>
+                    <image src="C:\Users\admin\cakd8\dj\Penguins.jpg" class="img-fluid">
+                    <h4>Lee Jusung</h4>
+                    <h5>1997.10.14</h5>
+                    <h5>BA in Mathematics</h5>
+                    <br>
+                </div>
+                <div class="col-lg-8" id="tech">
+                    <h1>Data Specialist</h1>
                     <br>
                     <ul>
                         <li>비즈니스 이슈 파악 및 데이터 과제화</li>
@@ -57,6 +72,13 @@
                         <li>AI 기반 비전 머신 러닝</li>
                     </ul>
                 </div>
+                <div class="col-lg-8" id="career">
+                    <h1>Career</h1>
+                    <br>
+                    <ul>
+                        <li>Samsung electron Data Analyst 2014-2019</li>
+                        <li>Google 2019-2022</li>
+                    </ul>
             </div>
         </div>
     </section>
