--- a/homepage/templates/homepage/about_me.html
+++ b/homepage/templates/homepage/about_me.html
@@ -49,6 +49,11 @@
                         <li>Samsung electron Data Analyst 2014-2019</li>
                         <li>Google 2019-2022</li>
                     </ul>
+                </div>
+                <div class="col-lg-4 mt-5">
+                    <img class="img-fluid" width="600" src="{% static 'homepage/images/hriver.jpg' %}"
+                </div>
+
             </div>
         </div>
     </section>
