--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     {% include 'blog/navbar.html'%}
-    <div class="container my-3">
+    <div class="container pt-5 my-5">
         <div class="row">
             <div class="col-md-8 col-lg-9" id="main-area">
                 {% block main_area %}
